# raymarcher

./: CMakeLists.txt
assets/: frag.glsl  vert.glsl
src/: main.cpp  scene.cpp  scene.h
